--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Responsive Grid View</title>
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,7 +23,7 @@
       <h2>Chania</h2>
     </div>
     <div class="row">
-      <div class="menu col-3">
+      <div class="col-3 menu">
         <ul>
           <li>The Flight</li>
           <li>The City</li>
@@ -31,7 +31,8 @@
           <li>The Food</li>
         </ul>
       </div>
-      <div class="main col-9">
+      <div class="col-6">
+        <h1>City</h1>
         <p>
           Chania is the capital of the Chania region on the island of Crete. The
           city can be divided in two parts, the old town and the modern city.
@@ -41,6 +42,22 @@
           resizing.
         </p>
       </div>
+      <div class="col-3 right">
+        <div class="aside">
+          <h2>What?</h2>
+          <p>Chania is a city on the island of Crete.</p>
+          <h2>Where?</h2>
+          <p>Crete is a Greek island in the Mediterranean Sea.</p>
+          <h2>How?</h2>
+          <p>You can reach Chania airport from all over Europe.</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>
+        Resize the browser window to see how the content respond to the
+        resizing.
+      </p>
     </div>
     <script src="" async defer></script>
   </body>
