--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Chania</h2>
     </div>
     <div class="row">
-      <div class="col-3 menu">
+      <div class="col-3 col-lt-3 menu">
         <ul>
           <li>The Flight</li>
           <li>The City</li>
@@ -31,7 +31,7 @@
           <li>The Food</li>
         </ul>
       </div>
-      <div class="col-6">
+      <div class="col-6 col-lt-9">
         <h1>City</h1>
         <p>
           Chania is the capital of the Chania region on the island of Crete. The
@@ -42,7 +42,7 @@
           resizing.
         </p>
       </div>
-      <div class="col-3 right">
+      <div class="col-3 col-lt-12">
         <div class="aside">
           <h2>What?</h2>
           <p>Chania is a city on the island of Crete.</p>
