--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           Chania is the capital of the Chania region on the island of Crete. The
           city can be divided in two parts, the old town and the modern city.
         </p>
-        <p>
-          Resize the browser window to see how the content respond to the
-          resizing.
-        </p>
+        <picture>
+          <source srcset="chania.jpg" />
+          <img src="chania.jpg" alt="City Chania" />
+        </picture>
       </div>
       <div class="col-3 col-lt-12">
         <div class="aside">
