--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="header">
       <h2>Chania</h2>
     </div>
+
+    <!--menu, main and aside are allocated in three column in a row-->
     <div class="row">
       <div class="col-3 col-lt-3 menu">
         <ul>
@@ -53,12 +55,26 @@
         </div>
       </div>
     </div>
+
+    <!--Embed from youtube-->
+    <iframe
+      width="1080"
+      height="608"
+      src="https://www.youtube.com/embed/UvmkS9QUimM"
+      title="Guide to Chania, Crete in 2024 | Watch before you go!"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+
     <div class="footer">
       <p>
         Resize the browser window to see how the content respond to the
         resizing.
       </p>
     </div>
+
     <script src="" async defer></script>
   </body>
 </html>
