--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">
@@ -57,16 +59,12 @@
     </div>
 
     <!--Embed from youtube-->
-    <iframe
-      width="1080"
-      height="608"
-      src="https://www.youtube.com/embed/UvmkS9QUimM"
-      title="Guide to Chania, Crete in 2024 | Watch before you go!"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin"
-      allowfullscreen
-    ></iframe>
+    <div>
+      <iframe width="1080" height="608" src="https://www.youtube.com/embed/UvmkS9QUimM"
+        title="Guide to Chania, Crete in 2024 | Watch before you go!" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
     <div class="footer">
       <p>
@@ -77,4 +75,5 @@
 
     <script src="" async defer></script>
   </body>
+
 </html>
